fix geojson sources

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     </div>
 
     <script type="text/javascript">
-      var ROOT_PATH = "https://geo.datav.aliyun.com/areas_v2/bound/330000_full.json";
+      var ROOT_PATH = "https://geo.datav.aliyun.com/areas/bound/geojson?code=330000_full";
       var dom = document.getElementById("map");
       var myChart = echarts.init(dom);
       var data;
