--- a/index.html
+++ b/index.html
@@ -322,17 +322,17 @@
       var cas = null;
 
       window.onload = function () {
-        var unit = []
-        unit = list.unit
-        for (var i = 0; i < unit.length; i++) {
-          html += `
-              <tr><td width="20%" align="center">${list.unit[i]}</td><td width="40%" align="center">${list.project_name[i]}</td><td width="30%" align="center">${list.study_area[i]}</td><td width="10%" align="center">${list.apply_on[i]}</td></tr>
-            `;
+        if(!list.unit.length){
+          for (var i = 0; i < list.unit.length; i++) {
+            html += `
+                <tr><td width="20%" align="center">${list.unit[i]}</td><td width="40%" align="center">${list.project_name[i]}</td><td width="30%" align="center">${list.study_area[i]}</td><td width="10%" align="center">${list.apply_on[i]}</td></tr>
+              `;
+          }
+          html += `</table>`;
+          $("#content").html(html);
+          $("#trans").html(html);
+          st();
         }
-        html += `</table>`;
-        $("#content").html(html);
-        $("#trans").html(html);
-        st();
       };
       cas = setInterval("st()", 50);
 
