--- a/index.html
+++ b/index.html
@@ -63,6 +63,9 @@
       var barName;
       var bar;
       var list;
+      var unit;
+      var project_name;
+      var study_area;
 
       var option;
 
@@ -72,6 +75,10 @@
         barName = params.barName;
         bar = params.bar;
         list = params.list;
+        unit = list.unit;
+        project_name = list.project_name;
+        study_area = list.study_area;
+        apply_on = list.apply_on;
       }
 
       var convertData = function (data) {
@@ -322,9 +329,9 @@
       var cas = null;
 
       window.onload = function () {
-        for (var i = 0; i < list.length; i++) {
+        for (var i = 0; i < unit.length; i++) {
           html += `
-              <tr><td width="20%" align="center">${list.unit[i]}</td><td width="40%" align="center">${list.project_name[i]}</td><td width="30%" align="center">${list.study_area[i]}</td><td width="10%" align="center">${list.apply_on[i]}</td></tr>
+              <tr><td width="20%" align="center">${unit[i]}</td><td width="40%" align="center">${project_name[i]}</td><td width="30%" align="center">${study_area[i]}</td><td width="10%" align="center">${apply_on[i]}</td></tr>
             `;
         }
         html += `</table>`;
