--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <link href="css/public.css" rel="stylesheet" type="text/css" />
-    <title>浙江省生命健康产业博士后工作站集中发布中心</title>
+    <title>浙江省博士后实时数据运行平台</title>
   </head>
 
   <body>
@@ -22,9 +22,9 @@
       <i class="topR"></i>
       <i class="bottomL"></i>
       <i class="bottomR"></i>
-      <div class="data-title">
+      <div class="data-title1">
         <b class="data-title-left">[</b>
-        <span>设站单位数据</span>
+        <span>浙江省博士后设站单位数据</span>
         <b class="data-title-right">]</b>
       </div>
     </div>
@@ -34,7 +34,7 @@
       <i class="topR"></i>
       <i class="bottomL"></i>
       <i class="bottomR"></i>
-      <div class="data-title">
+      <div class="data-title2">
         <b class="data-title-left">[</b>
         <span>招聘要求</span>
         <b class="data-title-right">]</b>
@@ -42,10 +42,9 @@
 
       <table id="table">
         <tr id="tb_title">
-          <th width="20%" align="center">招收单位</th>
-          <th width="40%" align="center">招收博士后项目</th>
+          <th width="25%" align="center">招收单位</th>
+          <th width="45%" align="center">招收博士后项目</th>
           <th width="30%" align="center">所需人员专业方向</th>
-          <th width="10%" align="center">发布日期</th>
         </tr>
       </table>
       <div id="list">
@@ -69,7 +68,6 @@
         unit = params.unit;
         project_name = params.project_name;
         study_area = params.study_area;
-        apply_on = params.apply_on;
       }
 
       var convertData = function (data) {
@@ -88,10 +86,44 @@
     </script>
     <script type="text/javascript" src="json/data.js"></script>
     <script>
+      var html = `<table border="1">`;
+      var c1 = document.getElementById("content");
+      var c2 = document.getElementById("trans");
+      var ca = document.getElementById("list");
+      var cas = null;
+
+      window.onload = function () {
+        for (var i = 0; i < unit.length; i++) {
+          html += `
+              <tr><td width="25%" align="center">${unit[i]}</td><td width="45%" align="center">${project_name[i]}</td><td width="30%" align="center">${study_area[i]}</td></tr>
+            `;
+        }
+        html += `</table>`;
+        $("#content").html(html);
+        $("#trans").html(html);
+        st();
+      };
+      cas = setInterval("st()", 50);
+
+      function st() {
+        if (ca.scrollTop >= c1.offsetHeight) {
+          ca.scrollTop = 0;
+        } else {
+          ca.scrollTop++;
+        }
+        // ca.onmouseover=function() {
+        //     clearInterval(cas);
+        // }
+        // ca.onmouseout=function() {
+        //     cas=setInterval('st()',50);
+        // }
+      }
+    </script>
+    <script>
       myChart.setOption(
         (option = {
           title: {
-            text: "浙江省生命健康产业博士后工作站集中发布平台",
+            text: "浙江省博士后实时数据运行平台",
             subtext: "",
             left: "center",
             top: "3%",
@@ -311,40 +343,6 @@
       window.addEventListener("resize", function () {
         myChart.resize();
       });
-    </script>
-    <script>
-      var html = `<table border="1">`;
-      var c1 = document.getElementById("content");
-      var c2 = document.getElementById("trans");
-      var ca = document.getElementById("list");
-      var cas = null;
-
-      window.onload = function () {
-        for (var i = 0; i < unit.length; i++) {
-          html += `
-              <tr><td width="20%" align="center">${unit[i]}</td><td width="40%" align="center">${project_name[i]}</td><td width="30%" align="center">${study_area[i]}</td><td width="10%" align="center">${apply_on[i]}</td></tr>
-            `;
-        }
-        html += `</table>`;
-        $("#content").html(html);
-        $("#trans").html(html);
-        st();
-      };
-      cas = setInterval("st()", 50);
-
-      function st() {
-        if (ca.scrollTop >= c1.offsetHeight) {
-          ca.scrollTop = 0;
-        } else {
-          ca.scrollTop++;
-        }
-        // ca.onmouseover=function() {
-        //     clearInterval(cas);
-        // }
-        // ca.onmouseout=function() {
-        //     cas=setInterval('st()',50);
-        // }
-      }
     </script>
   </body>
 </html>
